--- a/Kafka_Consumer (1).ipynb
+++ b/Kafka_Consumer (1).ipynb
@@ -44,8 +44,8 @@
     "import boto3\n",
     "client = boto3.client(\n",
     "'s3',\n",
-    "aws_access_key_id=\"AKIAT6AHLOR5UC42QC54\",\n",
-    "aws_secret_access_key=\"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\")"
+    "aws_access_key_id=\"\",\n",
+    "aws_secret_access_key=\"\")"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "source": [
     "consumer = KafkaConsumer(\n",
     "    'demotest1',\n",
-    "     bootstrap_servers=['13.127.99.165:9092'], #add your IP here\n",
+    "     bootstrap_servers=[':9092'], #add your IP here\n",
     "    value_deserializer=lambda x: loads(x.decode('utf-8')))"
    ]
   },
