--- a/Kafka_Producer (1).ipynb
+++ b/Kafka_Producer (1).ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "producer = KafkaProducer(bootstrap_servers=['13.127.99.165:9092'], #change ip here\n",
+    "producer = KafkaProducer(bootstrap_servers=[':9092'], #change ip here\n",
     "                         value_serializer=lambda x: \n",
     "                         dumps(x).encode('utf-8'))"
    ]
